src/c-wgpu.zig

pub const struct_WGPUBlendComponent = extern struct {
    operation: WGPUBlendOperation = @import("std").mem.zeroes(WGPUBlendOperation),
    srcFactor: WGPUBlendFactor = @import("std").mem.zeroes(WGPUBlendFactor),
    dstFactor: WGPUBlendFactor = @import("std").mem.zeroes(WGPUBlendFactor),
};
pub const WGPUBufferBindingType_BindingNotUsed: c_int = 0;
pub const WGPUBufferBindingType_Undefined: c_int = 1;
pub const WGPUBufferBindingType_Uniform: c_int = 2;
pub const WGPUBufferBindingType_Storage: c_int = 3;
pub const WGPUBufferBindingType_ReadOnlyStorage: c_int = 4;
pub const WGPUBufferBindingType_Force32: c_int = 2147483647;
pub const enum_WGPUBufferBindingType = c_uint;
pub const WGPUBufferBindingType = enum_WGPUBufferBindingType;
pub const struct_WGPUBufferBindingLayout = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    type: WGPUBufferBindingType = @import("std").mem.zeroes(WGPUBufferBindingType),
    hasDynamicOffset: WGPUBool = 0,
    minBindingSize: u64 = 0,
};
pub const WGPUBufferUsage = WGPUFlags;
pub const struct_WGPUBufferDescriptor = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    label: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
    usage: WGPUBufferUsage = 0,
    size: u64 = 0,
    mappedAtCreation: WGPUBool = 0,
};
pub const struct_WGPUColor = extern struct {
    r: f64 = 0,
    g: f64 = 0,
    b: f64 = 0,
    a: f64 = 0,
};
pub const struct_WGPUCommandBufferDescriptor = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    label: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
};
pub const struct_WGPUCommandEncoderDescriptor = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    label: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
};
pub const struct_WGPUCompatibilityModeLimits = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    maxStorageBuffersInVertexStage: u32 = 0,
    maxStorageTexturesInVertexStage: u32 = 0,
    maxStorageBuffersInFragmentStage: u32 = 0,
    maxStorageTexturesInFragmentStage: u32 = 0,
};
pub const WGPUCompilationMessageType_Error: c_int = 1;
pub const WGPUCompilationMessageType_Warning: c_int = 2;
pub const WGPUCompilationMessageType_Info: c_int = 3;
pub const WGPUCompilationMessageType_Force32: c_int = 2147483647;
pub const enum_WGPUCompilationMessageType = c_uint;
pub const WGPUCompilationMessageType = enum_WGPUCompilationMessageType;
pub const struct_WGPUCompilationMessage = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    message: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
    type: WGPUCompilationMessageType = @import("std").mem.zeroes(WGPUCompilationMessageType),
    lineNum: u64 = 0,
    linePos: u64 = 0,
    offset: u64 = 0,
    length: u64 = 0,
};
pub const struct_WGPUConstantEntry = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    key: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
    value: f64 = 0,
};
pub const struct_WGPUExtent3D = extern struct {
    width: u32 = 0,
    height: u32 = 0,
    depthOrArrayLayers: u32 = 0,
};
pub const struct_WGPUExternalTextureBindingEntry = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
    externalTexture: WGPUExternalTexture = null,
};
pub const struct_WGPUExternalTextureBindingLayout = extern struct {
    chain: WGPUChainedStruct = @import("std").mem.zeroes(WGPUChainedStruct),
};
pub const struct_WGPUFuture = extern struct {
    id: u64 = 0,
};
pub const struct_WGPUInstanceLimits = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    timedWaitAnyMaxCount: usize = 0,
    pub const wgpuGetInstanceLimits = __root.wgpuGetInstanceLimits;
};
pub const struct_WGPUMultisampleState = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    count: u32 = 0,
    mask: u32 = 0,
    alphaToCoverageEnabled: WGPUBool = 0,
};
pub const struct_WGPUOrigin3D = extern struct {
    x: u32 = 0,
    y: u32 = 0,
    z: u32 = 0,
};
pub const struct_WGPUPassTimestampWrites = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    querySet: WGPUQuerySet = null,
    beginningOfPassWriteIndex: u32 = 0,
    endOfPassWriteIndex: u32 = 0,
};
pub const struct_WGPUPipelineLayoutDescriptor = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    label: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
    bindGroupLayoutCount: usize = 0,
    bindGroupLayouts: [*c]const WGPUBindGroupLayout = null,
    immediateSize: u32 = 0,
};
pub const WGPUPrimitiveTopology_Undefined: c_int = 0;
pub const WGPUPrimitiveTopology_PointList: c_int = 1;
pub const WGPUPrimitiveTopology_LineList: c_int = 2;
pub const WGPUPrimitiveTopology_LineStrip: c_int = 3;
pub const WGPUPrimitiveTopology_TriangleList: c_int = 4;
pub const WGPUPrimitiveTopology_TriangleStrip: c_int = 5;
pub const WGPUPrimitiveTopology_Force32: c_int = 2147483647;
pub const enum_WGPUPrimitiveTopology = c_uint;
pub const WGPUPrimitiveTopology = enum_WGPUPrimitiveTopology;
pub const WGPUIndexFormat_Undefined: c_int = 0;
pub const WGPUIndexFormat_Uint16: c_int = 1;
pub const WGPUIndexFormat_Uint32: c_int = 2;
pub const WGPUIndexFormat_Force32: c_int = 2147483647;
pub const enum_WGPUIndexFormat = c_uint;
pub const WGPUIndexFormat = enum_WGPUIndexFormat;
pub const WGPUFrontFace_Undefined: c_int = 0;
pub const WGPUFrontFace_CCW: c_int = 1;
pub const WGPUFrontFace_CW: c_int = 2;
pub const WGPUFrontFace_Force32: c_int = 2147483647;
pub const enum_WGPUFrontFace = c_uint;
pub const WGPUFrontFace = enum_WGPUFrontFace;
pub const WGPUCullMode_Undefined: c_int = 0;
pub const WGPUCullMode_None: c_int = 1;
pub const WGPUCullMode_Front: c_int = 2;
pub const WGPUCullMode_Back: c_int = 3;
pub const WGPUCullMode_Force32: c_int = 2147483647;
pub const enum_WGPUCullMode = c_uint;
pub const WGPUCullMode = enum_WGPUCullMode;
pub const struct_WGPUPrimitiveState = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    topology: WGPUPrimitiveTopology = @import("std").mem.zeroes(WGPUPrimitiveTopology),
    stripIndexFormat: WGPUIndexFormat = @import("std").mem.zeroes(WGPUIndexFormat),
    frontFace: WGPUFrontFace = @import("std").mem.zeroes(WGPUFrontFace),
    cullMode: WGPUCullMode = @import("std").mem.zeroes(WGPUCullMode),
    unclippedDepth: WGPUBool = 0,
};
pub const WGPUQueryType_Occlusion: c_int = 1;
pub const WGPUQueryType_Timestamp: c_int = 2;
pub const WGPUQueryType_Force32: c_int = 2147483647;
pub const enum_WGPUQueryType = c_uint;
pub const WGPUQueryType = enum_WGPUQueryType;
pub const struct_WGPUQuerySetDescriptor = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    label: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
    type: WGPUQueryType = @import("std").mem.zeroes(WGPUQueryType),
    count: u32 = 0,
};
pub const struct_WGPUQueueDescriptor = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    label: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
};
pub const struct_WGPURenderBundleDescriptor = extern struct {
    nextInChain: [*c]WGPUChainedStruct = null,
    label: WGPUStringView = @import("std").mem.zeroes(WGPUStringView),
};
pub const WGPUTextureFormat_Undefined: c_int = 0;
pub const WGPUTextureFormat_R8Unorm: c_int = 1;
pub const WGPUTextureFormat_R8Snorm: c_int = 2;
pub const WGPUTextureFormat_R8Uint: c_int = 3;
pub const WGPUTextureFormat_R8Sint: c_int = 4;
pub const WGPUTextureFormat_R16Unorm: c_int = 5;
pub const WGPUTextureFormat_R16Snorm: c_int = 6;
pub const WGPUTextureFormat_R16Uint: c_int = 7;
pub const WGPUTextureFormat_R16Sint: c_int = 8;
pub const WGPUTextureFormat_R16Float: c_int = 9;
pub const WGPUTextureFormat_RG8Unorm: c_int = 10;
pub const WGPUTextureFormat_RG8Snorm: c_int = 11;
pub const WGPUTextureFormat_RG8Uint: c_int = 12;
pub const WGPUTextureFormat_RG8Sint: c_int = 13;
pub const WGPUTextureFormat_R32Float: c_int = 14;
pub const WGPUTextureFormat_R32Uint: c_int = 15;
pub const WGPUTextureFormat_R32Sint: c_int = 16;
pub const WGPUTextureFormat_RG16Unorm: c_int = 17;
pub const WGPUTextureFormat_RG16Snorm: c_int = 18;
pub const WGPUTextureFormat_RG16Uint: c_int = 19;
pub const WGPUTextureFormat_RG16Sint: c_int = 20;
pub const WGPUTextureFormat_RG16Float: c_int = 21;
pub const WGPUTextureFormat_RGBA8Unorm: c_int = 22;
pub const WGPUTextureFormat_RGBA8UnormSrgb: c_int = 23;
pub const WGPUTextureFormat_RGBA8Snorm: c_int = 24;
pub const WGPUTextureFormat_RGBA8Uint: c_int = 25;
pub const WGPUTextureFormat_RGBA8Sint: c_int = 26;
pub const WGPUTextureFormat_BGRA8Unorm: c_int = 27;
pub const WGPUTextureFormat_BGRA8UnormSrgb: c_int = 28;
pub const WGPUTextureFormat_RGB10A2Uint: c_int = 29;
pub const WGPUTextureFormat_RGB10A2Unorm: c_int = 30;
pub const WGPUTextureFormat_RG11B10Ufloat: c_int = 31;
pub const WGPUTextureFormat_RGB9E5Ufloat: c_int = 32;
pub const WGPUTextureFormat_RG32Float: c_int = 33;
pub const WGPUTextureFormat_RG32Uint: c_int = 34;
pub const WGPUTextureFormat_RG32Sint: c_int = 35;
pub const WGPUTextureFormat_RGBA16Unorm: c_int = 36;
pub const WGPUTextureFormat_RGBA16Snorm: c_int = 37;
pub const WGPUTextureFormat_RGBA16Uint: c_int = 38;
pub const WGPUTextureFormat_RGBA16Sint: c_int = 39;
pub const WGPUTextureFormat_RGBA16Float: c_int = 40;
pub const WGPUTextureFormat_RGBA32Float: c_int = 41;
pub const WGPUTextureFormat_RGBA32Uint: c_int = 42;
pub const WGPUTextureFormat_RGBA32Sint: c_int = 43;
pub const WGPUTextureFormat_Stencil8: c_int = 44;
pub const WGPUTextureFormat_Depth16Unorm: c_int = 45;
pub const WGPUTextureFormat_Depth24Plus: c_int = 46;
pub const WGPUTextureFormat_Depth24PlusStencil8: c_int = 47;
pub const WGPUTextureFormat_Depth32Float: c_int = 48;
pub const WGPUTextureFormat_Depth32FloatStencil8: c_int = 49;
pub const WGPUTextureFormat_BC1RGBAUnorm: c_int = 50;
pub const WGPUTextureFormat_BC1RGBAUnormSrgb: c_int = 51;
pub const WGPUTextureFormat_BC2RGBAUnorm: c_int = 52;
pub const WGPUTextureFormat_BC2RGBAUnormSrgb: c_int = 53;
pub const WGPUTextureFormat_BC3RGBAUnorm: c_int = 54;
pub const WGPUTextureFormat_BC3RGBAUnormSrgb: c_int = 55;
pub const WGPUTextureFormat_BC4RUnorm: c_int = 56;
pub const WGPUTextureFormat_BC4RSnorm: c_int = 57;
pub const WGPUTextureFormat_BC5RGUnorm: c_int = 58;
pub const WGPUTextureFormat_BC5RGSnorm: c_int = 59;
pub const WGPUTextureFormat_BC6HRGBUfloat: c_int = 60;
pub const WGPUTextureFormat_BC6HRGBFloat: c_int = 61;
pub const WGPUTextureFormat_BC7RGBAUnorm: c_int = 62;
pub const WGPUTextureFormat_BC7RGBAUnormSrgb: c_int = 63;
pub const WGPUTextureFormat_ETC2RGB8Unorm: c_int = 64;
pub const WGPUTextureFormat_ETC2RGB8UnormSrgb: c_int = 65;
pub const WGPUTextureFormat_ETC2RGB8A1Unorm: c_int = 66;
pub const WGPUTextureFormat_ETC2RGB8A1UnormSrgb: c_int = 67;
pub const WGPUTextureFormat_ETC2RGBA8Unorm: c_int = 68;
pub const WGPUTextureFormat_ETC2RGBA8UnormSrgb: c_int = 69;
pub const WGPUTextureFormat_EACR11Unorm: c_int = 70;
pub const WGPUTextureFormat_EACR11Snorm: c_int = 71;
pub const WGPUTextureFormat_EACRG11Unorm: c_int = 72;
pub const WGPUTextureFormat_EACRG11Snorm: c_int = 73;
pub const WGPUTextureFormat_ASTC4x4Unorm: c_int = 74;
pub const WGPUTextureFormat_ASTC4x4UnormSrgb: c_int = 75;
pub const WGPUTextureFormat_ASTC5x4Unorm: c_int = 76;
pub const WGPUTextureFormat_ASTC5x4UnormSrgb: c_int = 77;
pub const WGPUTextureFormat_ASTC5x5Unorm: c_int = 78;
pub const WGPUTextureFormat_ASTC5x5UnormSrgb: c_int = 79;
pub const WGPUTextureFormat_ASTC6x5Unorm: c_int = 80;
pub const WGPUTextureFormat_ASTC6x5UnormSrgb: c_int = 81;
pub const WGPUTextureFormat_ASTC6x6Unorm: c_int = 82;
pub const WGPUTextureFormat_ASTC6x6UnormSrgb: c_int = 83;
pub const WGPUTextureFormat_ASTC8x5Unorm: c_int = 84;
pub const WGPUTextureFormat_ASTC8x5UnormSrgb: c_int = 85;
pub const WGPUTextureFormat_ASTC8x6Unorm: c_int = 86;
pub const WGPUTextureFormat_ASTC8x6UnormSrgb: c_int = 87;
pub const WGPUTextureFormat_ASTC8x8Unorm: c_int = 88;
